style.css
/* Header*/
header {
  font-weight: bold;
  font-size: 55px;
  padding: 8px;
  text-align: center;
}
/* search container */
.search-container{
  text-align: center;
  background-color: #1f1f1f;
  padding: 70px;
  margin: 10px;
  color: white
}
/* Stlye for the search and submit button */
/* form#search_movie input{
  padding: 10px;
 font-size: 15px;
  border: 1px solid rgb(8, 8, 8);
  width: 250px;
  background: #fffefe;
  border-radius: 8px;
} */
/* Container for submit button to move down line */
.button{
  padding: 12px;
}
/* Submit button style */
form#search_movie button{ 
  width: 270px;
  height: 40px;
  line-height: 1px;
 background: #8B0000;
 color: white;
 font-weight: bold;
 border: #020202 1px solid;
 border-radius: 8px;
  font-size: 18px;
 cursor: pointer;
}
form#search_movie button:hover {
 background: #b90e0a;
 color: #dbd9d9;
}

/*form input style*/
form#search_movie input{
  color: white
}

/*form active color*/
.input-field .prefix.active,
.input-field.col .prefix ~ label,
.input-field.col .prefix ~ .validate ~ label  {
  color:white
}

/* Container for the movie titles */
.Name-Tag {
  text-align: center;
}
 /* Card Container */
 /* .card-container {
  display: flex;
  justify-content: space-around; 
  flex-wrap: wrap;
} */
/* Card  */
/* .card {
  display: flex;
  flex-direction: column;
  width: 17%;
  height: 450px;
  border: 1px solid #ddd;
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
} */

/* Card Image */
.card img {
  display:block;
  margin: 0 auto;
  float: left;
 width:  150px;
 height: 150px;
 object-fit: cover;
}

/* Card Content */
.card-content2 p {
  padding: 5px;
  overflow: auto;
  max-height: 150px;
}

/* Card Title */
.card-title {
  font-size: 18px;
  font-weight: bold;
  margin-bottom: 8px;
  text-align: center;
}

/* Card Description */
.card-description {
  font-size: 14px;
  color: #666;
  margin-bottom: 12px;
  overflow: auto;
  max-height: 150px;
}

/* Card Link */ 
.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating) {
  color:#8B0000
}
/* .recipe-link {
  display: flex;
  justify-content: center;
  /* margin-top: 60%; */
  /* border: 1px solid black;
  border-radius: 5px;
  padding: 10px;
  text-decoration: none; */
  /* font-size: 12px;
  font-weight: bold;
  background-color:#b90e0a ;}  */

/* Hover effect on the link */
.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating):hover {
  text-decoration: underline;
  color:#8B0000
}
/* Adjusts to the size of screen */
@media screen and (max-width: 768px) {
     .card-container {
    flex-wrap: wrap;
 }
 .card{
  width:100%;
 }
 header{
  text-align: center;
 }
 .button{
  padding: 0;
 }
}

/* navigation */
nav {
  background-color: #8B0000;
  font-weight: bold;
}

nav i.link-icon {
  display: inline;
}

/* search results */
.recipes, 
.search-results .recipe, 
.previous-search .recipe {
  display: flex;
  flex-wrap: wrap;
}

/* hides elements */
.hidden {
  display: none;
}

